# haptools

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
.ccg/tasks/archive/2026-05/clarify-package-architecture/: review.md  task.json
.ccg/tasks/archive/2026-05/reference-repo-decoupling-index/: review.md  task.json
.ccg/tasks/archive/2026-05/schema-and-python-compute-audit/: review.md  task.json
.ccg/tasks/archive/2026-05/summary-contract-gap-analysis/: review.md  summary-contract-gap-analysis.md  task.json
.ccg/tasks/archive/2026-05/summary-contract-reference-review/: review.md  task.json
data/: sample_china_geo.txt  sample_world_geo.txt
docs/specs/: summary-contract-v1.md
haplokit/: _distribution.py  cli.py  summary_contract.py
src/cpp/: gff_annotator.cpp  gff_annotator.h  main.cpp  view_backend.cpp  view_backend.h
tests/cpp/: view_backend_test.cpp
tests/python/: test_haplokit_cli_contract.py  test_haplokit_real_vcf.py  test_python_only_plotting_contract.py  test_summary_contract.py
